# apples-to-models

./: .gitignore  README.md  game.py  model_utils.py  pyproject.toml  pyrightconfig.json  requirements.txt  test_game.py  test_model_utils.py
.github/workflows/: ci.yml
.mentat/: precommit.sh  setup.sh
apples_to_models.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
benchmark/: game.py  game_report.py  model_utils.py  prompts.py  run.py  utils.py
benchmark/cards/: green_cards.txt  red_cards.txt
benchmark/decks/: red_cards.txt
benchmark/games/20250218_054514/: game_report.html  game_state.json
benchmark/games/20250218_054633/: game_report.html  game_state.json
benchmark/stubs/: aiohttp.pyi
cards/: green_cards.txt
examples/: model_utils_example.py
tests/: test_game.py  test_model_utils.py  test_prompts.py  test_run.py
