[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apples-to-models"
version = "0.1.0"
description = "A benchmark for testing LLMs using Apples to Apples"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pytest>=7.0.0",
    "termcolor>=2.0.0",
    "httpx>=0.24.0",
    "aiohttp[speedups]>=3.9.0",
]

[tool.setuptools.packages.find]
include = ["benchmark*"]

[tool.ruff]
# Enable isort rules
extend-select = ["I"]

[tool.ruff.isort]
combine-as-imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
include = ["benchmark", "tests"]
extraPaths = ["."]
venvPath = "."
venv = ".venv"
reportMissingImports = true
pythonVersion = "3.11"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true